dockerized api and db

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,12 +16,18 @@ RUN pip install -r requirements.txt
 
 # copy entrypoint.sh
 COPY ./entrypoint.sh .
-RUN sed -i 's/\r$//g' /usr/src/backend/entrypoint.sh
-RUN chmod +x /usr/src/backend/entrypoint.sh
+RUN sed -i 's/\r$//g' /usr/src/api/entrypoint.sh
+RUN chmod +x /usr/src/api/entrypoint.sh
 
 
 # copy project
 COPY . .
 
+EXPOSE 8000
+
 # run entrypoint.sh
 ENTRYPOINT ["/usr/src/api/entrypoint.sh"]
+
+
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
